infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-monorepo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-monorepo
  template:
    metadata:
      labels:
        app: auth-monorepo
    spec:
      containers:
        - name: auth-monorepo
          image: lschulzes/auth-monorepo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-monorepo-srv
spec:
  selector:
    app: auth-monorepo
  ports:
    - name: auth-monorepo
      protocol: TCP
      port: 3000
      targetPort: 3000
